larger tet box for url input

--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,10 @@
                     <label for="url">URL</label>
                     <input type="text"
                            autocomplete="off"
-                           class="form-control"
+                           class="form-control input_url"
                            placeholder="http://..."
-                           name="url" id="url"
+                           name="url"
+                           id="url"
                            data-bind="value: downloadView.url_to_fetch, valueUpdate: ['input', 'afterkeydown']"
                             />
                 </div>
