--- a/www/index.html
+++ b/www/index.html
@@ -119,7 +119,7 @@
                         </thead>
                         <tbody data-bind="foreach:currentsView.items">
                         <tr>
-                            <td data-bind="text:filename">
+                            <td data-bind="text:filenameDisplay">
                                 Filename.mpeg
                             </td>
                             <td data-bind="text:eta">
