--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
                            id="url"
                            data-bind="value: downloadView.url_to_fetch, valueUpdate: ['input', 'afterkeydown']"
                             />
+                    <button type="button" class="btn btn-default btn-clear">Clear</button>
                 </div>
             </form>
 
@@ -47,44 +48,48 @@
                 </div>
             </div>
 
-
-            <div class="panel panel-default center-block optionsView visible"
-                 style="max-width: 550px; margin-top: 20px"
-                 data-bind="">
+            <div class="panel panel-default center-block optionsView "
+                 data-bind="css:{visible:downloadView.errors().length==0}">
+                <div class="panel-heading">
+                    <h3 class="panel-title"  data-bind="text:downloadView.fulltitle">Panel title</h3>
+                </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
 
-                        <div class="form-group" data-bind="if:downloadView.formats().length>0">
-                            <label for="disabledSelect" class="col-sm-4 control-label">Choose a format</label>
-                            <div class="col-sm-6">
-                                <select id="disabledSelect" class="form-control"
+                        <div class="well well-sm" data-bind="text:downloadView.description">...</div>
+
+                        <div class="row" data-bind="if:downloadView.formats().length>0">
+                            <div class="col-xs-5">
+                                <label for="disabledSelect" class=" control-label">Choose a format</label>
+                            </div>
+                            <div class="col-xs-5">
+                                <select id="disabledSelect" class="form-control input-sm"
                                         data-bind="options:downloadView.formats,value: downloadView.format">
                                 </select>
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-4 col-sm-4">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" data-bind="checked: downloadView.audio_only"> Extract audio only
-                                    </label>
-                                </div>
+                        <div class="row">
+                            <div class="col-xs-5"></div>
+                            <div class="col-xs-5 text-left">
+                                <label>
+                                    <input type="checkbox" data-bind="checked: downloadView.audio_only"> Audio only
+                                </label>
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-4 col-sm-4">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" data-bind="checked: downloadView.force_restart"> Force restart
-                                    </label>
-                                </div>
+                        <div class="row">
+                            <div class="col-xs-5"></div>
+                            <div class="col-xs-5 text-left">
+                                <label>
+                                    <input type="checkbox" data-bind="checked: downloadView.force_restart"> Force restart
+                                </label>
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-7">
+                        <div class="row">
+                            <div class="col-xs-5"></div>
+                            <div class="col-xs-5 text-left">
                                 <button type="submit" class="btn btn-default">Download!</button>
                             </div>
                         </div>
@@ -92,7 +97,6 @@
                     </form>
                 </div>
             </div>
-
 
             <div class="loader" data-bind="css:{visible:downloadView.url_to_fetch().length>0&&downloadView.errors().length==0}">
                 <span class="ion-ios7-reloading"></span>
@@ -102,13 +106,17 @@
 
 
 
-        <div class="panel panel-default center-block currentsView" style="max-width: 100%;" data-bind="css:{visible:currentsView.loaded()}">
+        <div class="panel panel-default center-block currentsView"
+             style="max-width: 100%;"
+             data-bind="css:{visible:currentsView.loaded()}">
             <div class="panel-body">
 
                 <div class="table-responsive">
                     <table class="table table-condensed table-hover table-striped text-left">
                         <thead>
                         <tr>
+                            <th>Filename</th>
+                            <th>ID</th>
                             <th>TITLE</th>
                             <th>ETA</th>
                             <th>SPEED</th>
@@ -122,6 +130,12 @@
                             <td data-bind="text:filenameDisplay">
                                 Filename.mpeg
                             </td>
+                            <td data-bind="text:display_id">
+                                Filename.mpeg
+                            </td>
+                            <td data-bind="text:titleDisplay">
+                                Filename.mpeg
+                            </td>
                             <td data-bind="text:eta">
                                 1h20
                             </td>
@@ -132,60 +146,62 @@
                                 140 ko/s
                             </td>
                             <td style="width: 20%;">
-                                <div class="progress progress-striped active" style="margin-bottom: 0px;"
-                                     data-bind="css:{visible:is_downloading(),
+                                <div class="status-container">
+                                    <div class="progress progress-striped active" style="margin-bottom: 0px;"
+                                         data-bind="css:{visible:is_downloading(),
                                      'eventually_inactive':inactive_level()=='eventually_inactive',
                                      'probably_inactive':inactive_level()=='probably_inactive',
                                      'seriously_inactive':inactive_level()=='seriously_inactive'
                                      }">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-                                         style="width: 0%"
-                                         data-bind="style:{width:achieved},attr:{'aria-valuenow':achieved},
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+                                             style="width: 0%"
+                                             data-bind="style:{width:achieved},attr:{'aria-valuenow':achieved},
                                          css:{
                                      'progress-bar-info':inactive_level()=='eventually_inactive',
                                      'progress-bar-warning':inactive_level()=='probably_inactive',
                                      'progress-bar-danger':inactive_level()=='seriously_inactive'
                                      }">
-                                        <span class="achieved" data-bind="text:achieved()+' Completed',css:{visible:!is_inactive()}">45% Complete</span>
-                                        <span class="inactivity" data-bind="text:inactivity_time()+' sec. inactivity',css:{visible:is_inactive()}">5 sec</span>
+                                            <span class="achieved" data-bind="text:achieved()+' Completed',css:{visible:!is_inactive()}">45% Complete</span>
+                                            <span class="inactivity" data-bind="text:inactivity_time()+' sec. inactivity',css:{visible:is_inactive()}">5 sec</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="btn-start" data-bind="css:{visible:is_to_download()}">
-                                    <div class="bg-primary"></div>
-                                    <button type="button" class="btn btn-xs btn-link">
-                                        <span class="ion-ios7-play-outline"></span> Start download
-                                    </button>
-                                </div>
-                                <div class="btn-start" data-bind="css:{visible:is_to_restart()&&errors().length}">
-                                    <div class="bg-primary"></div>
-                                    <button type="button" class="btn btn-xs btn-link">
-                                        <span class="ion-ios7-information-outline"></span>
-                                        <span data-bind="html:errors().length"></span> errors! &nbsp; Restart
-                                    </button>
-                                </div>
-                                <div class="btn-play" data-bind="css:{visible:status()=='downloaded'}">
-                                    <div class="bg-primary"></div>
-                                    <button type="button" class="btn btn-xs btn-link ">
-                                        <span class="ion-ios7-play-outline"></span>
-                                        play
-                                    </button>
+                                    <div class="btn-start" data-bind="css:{visible:is_to_download()}">
+                                        <div class="bg-primary"></div>
+                                        <button type="button" class="btn btn-xs btn-link">
+                                            <span class="ion-ios7-play-outline"></span> Start download
+                                        </button>
+                                    </div>
+                                    <div class="btn-start" data-bind="css:{visible:is_to_restart()&&errors().length}">
+                                        <div class="bg-primary"></div>
+                                        <button type="button" class="btn btn-xs btn-link">
+                                            <span class="ion-ios7-information-outline"></span>
+                                            <span data-bind="html:errors().length"></span> errors! &nbsp; Restart
+                                        </button>
+                                    </div>
+                                    <div class="btn-play" data-bind="css:{visible:status()=='downloaded'}">
+                                        <div class="bg-primary"></div>
+                                        <button type="button" class="btn btn-xs btn-link ">
+                                            <span class="ion-ios7-play-outline"></span>
+                                            play
+                                        </button>
+                                    </div>
                                 </div>
                             </td>
                             <td>
                                 <button type="button" title="stop" class="btn btn-default btn-xs btn-stop">
-                                    <span class="ion-ios7-close-outline  "></span>
+                                    <span class="ion-ios7-close-outline"></span>
                                 </button>
                                 <button type="button" title="restart" class="btn btn-default btn-xs btn-restart">
-                                    <span class="ion-ios7-skipforward-outline   "></span>
+                                    <span class="ion-ios7-skipforward-outline"></span>
                                 </button>
                                 <button type="button" title="download" class="btn btn-default btn-xs btn-download">
-                                    <span class="ion-ios7-download-outline   "></span>
+                                    <span class="ion-ios7-download-outline"></span>
                                 </button>
                                 <button type="button" title="trash" class="btn btn-default btn-xs btn-trash">
-                                    <span class="ion-ios7-trash-outline   "></span>
+                                    <span class="ion-ios7-trash-outline"></span>
                                 </button>
                                 <button type="button" title="edit" class="btn btn-default btn-xs btn-edit">
-                                    <span class="ion-ios7-plus-empty   "></span>
+                                    <span class="ion-ios7-plus-empty"></span>
                                 </button>
                             </td>
                         </tr>
